--- a/rakefile
+++ b/rakefile
@@ -105,7 +105,7 @@ end
 desc "Run the program"
 task :run => :build do |t, args|
 	# sh "#{MPIEXEC} -n 2 #{OUT}"
-	sh OUT, *args.extras
+	sh OUT, *args.extras.map(&:split).flatten
 end
 
 desc "Compile the program"
